# ipl_auction

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  api_specs.md  frontend_spec.md  prometheus.yml  shell.nix
clean_up_scripts/: package-lock.json  package.json  server.js
migrations/: 0000001_up.sql  0000002_up.sql  each player category.json  ipl_auction_schema.sql  players_update.sql
src/: auction.rs  main.rs
src/controllers/: admin.rs  authentication.rs  mod.rs  others.rs  player.rs  profile.rs  rooms.rs
src/middlewares/: authentication.rs
src/models/: admin_models.rs  app_state.rs  auction_models.rs  authentication_models.rs  background_db_tasks.rs  bot.rs  mod.rs  others.rs  player_models.rs  room_models.rs  webRTC_models.rs
src/observability/: metrics.rs  mod.rs
src/routes/: admin_routes.rs  mod.rs  players_routes.rs  rooms_routes.rs
src/services/: auction.rs  auction_logic_executor.rs  auction_room.rs  background_db_tasks_runner.rs  http_tracing.rs  llm_call.rs  mod.rs  other.rs  tracing.rs
