[package]
name = "ipl_auction"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["Guttikonda Phanidhar Reddy <phanidharguttikonda0@gmail.com>"]
[dependencies]
axum = { version = "0.8.6", features = ["ws", "tokio"] }
tracing = "0.1.44"
tokio = {version = "1.48.0", features = ["full"]}
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
serde_json = "1.0.145"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
redis-derive = "0.2.0"
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono","runtime-tokio-native-tls"] }
futures-util = "0.3.31"
json-web-token = "0.2.0"
chrono = { version = "0.4.42", features = ["serde"] }
tower = "0.5.2"
http = "1.3.1"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
tracing-appender = "0.2.4"
base64 = "0.22.1"
tower-http = {version = "0.6.8", features = ["cors", "trace"]}
metric = "0.1.2"
metrics-exporter-prometheus = "0.18.1"